--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 <div class="tac">
   <p class="sec_title_6 sec_title_ul invew">我々が全て解決致します。</p>
   <figure class="title_bg_img6"></figure>
-  <p class="sec_text_1"><b>クライアント専属の営業チームを構築させアウトバウンド領域でリード獲得からクロージングまで全てワンストップで営業課題をご支援。唯一無二の営業チームでビジネスをフルサポート致します。</b></p>
+  <p class="sec_text_1"><b>クライアント専属の営業チームを構築させアウトバウンド領域でリード獲得からクロージングまで全てワンストップで営業課題をご支援。<br>唯一無二の営業チームでビジネスをフルサポート致します。</b></p>
 </div>
 <br>
 <br>
@@ -294,7 +294,8 @@
       <p class="reason_number_2"><span>POINT</span><br>
         01</p>
       <img src="img/icon_contract.png" style="width: 110px;top:65px;" ></div>
-    <p class="point_1"><span class="marker_2 js-markerScrollAnimation">クライアント専属の営業チームを構築</p>
+    <p class="point_1"><span class="marker_2 js-markerScrollAnimation">クライアント専属の<wbr>営業チームを構築</p>
+		
   </li>
   <li class="inview">
 	  <img class="check_icon" src="img/icon_check.png">
@@ -303,6 +304,7 @@
         02</p>
       <img src="img/icon_cycle.png" ></div>
     <p class="point_2"><span class="marker_2 js-markerScrollAnimation">最短最速で新規開拓をご支援</span></p>
+	  
   </li>
   
 </ul>
@@ -313,8 +315,8 @@
       <p class="reason_number_2"><span>POINT</span><br>
         03</p>
       <img src="img/icon_graph.png" ></div>
-    <p class="point_3">リードセール スクロージングセールス コアセールス<br>
-      <span class="marker_2 js-markerScrollAnimation">案件に応じてプロの専門スタッフをアサイン</span></p>
+    <p class="point_3">リードセールス<br>
+クロージングセールス<br>コアセールス<br><span class="marker_2 js-markerScrollAnimation">案件に応じてプロの<br>専門スタッフをアサイン</span></p>		
   </li>
   <li class="inview">
 	  <img class="check_icon" src="img/icon_check.png">
@@ -322,7 +324,7 @@
       <p class="reason_number_2"><span>POINT</span><br>
         04</p>
       <img src="img/icon_light.png" style="width: 70px;"></div>
-    <p class="point_4">営業戦略策定 アプローチリスト準備 スクリプト構築まで<br><span class="marker_2 js-markerScrollAnimation">事前構築は全てお任せください</span></p>
+    <p class="point_4">営業戦略策定<br>アプローチリスト準備<br>スクリプト構築まで<br><span class="marker_2 js-markerScrollAnimation">事前構築は全てお任せください</span></p> 
   </li>
   <li class="inview">
 	  <img class="check_icon" src="img/icon_check.png">
@@ -330,7 +332,8 @@
       <p class="reason_number_2"><span>POINT</span><br>
         05</p>
       <img src="img/icon_tel.png"></div>
-    <p class="point_5">KPIマネジメント 行動管理 架電データなどは<br><span class="marker_2 js-markerScrollAnimation">CTI・SFAで可視化</span></p>
+    <p class="point_5">KPIマネジメント<br>行動管理架電データなどは<br><span class="marker_2 js-markerScrollAnimation">CTI・SFAで可視化</span></p>
+	  
   </li>
 </ul>
 </section>
@@ -352,7 +355,7 @@
             01</p>
           <img src="img/circle_img1.jpeg" class="circle_img"></div>
         <div>
-          <p class="wb"><span class="marker_3 js-markerScrollAnimation">営業に特化したトップセールスが多数在籍。</span></p>
+          <p class="wb"><span class="marker_3 js-markerScrollAnimation">アウトバウンド営業に特化したトップセールスチームが多数在籍</span></p>
         </div>
       </li>
       <li class="point inview">
@@ -361,7 +364,7 @@
             02</p>
           <img src="img/circle_img2.jpeg" class="circle_img"></div>
         <div>
-          <p class="wb"><span class="marker_3 js-markerScrollAnimation">質の高いリード獲得、商談対応をお約束いたします。</span></p>
+          <p class="wb"><span class="marker_3 js-markerScrollAnimation">数は勿論、<br>質の高いアポイント獲得を納品</span></p>
         </div>
       </li>
       <li class="point inview">
@@ -370,7 +373,7 @@
             03</p>
           <img src="img/circle_img3.jpeg" class="circle_img"></div>
         <div>
-          <p class="wb"><span class="marker_3 js-markerScrollAnimation">リスト作成・スクリプト作成・提案資料まですべて一貫してサポート。</span></p>
+          <p class="wb"><span class="marker_3 js-markerScrollAnimation">ブラックボックス化させない全てを可視化させた<br>CRM、SFAを完備</span></p>
         </div>
       </li>
     </ul>
@@ -381,7 +384,7 @@
             04</p>
           <img src="img/circle_img4.jpeg" class="circle_img"></div>
         <div>
-          <p class="wb"><span class="marker_3 js-markerScrollAnimation">マーケティング×分析×リサーチ実施前の高度な営業戦略。</span></p>
+          <p class="wb"><span class="marker_3 js-markerScrollAnimation">セールスマーケティングチームによる高度な営業戦略策定、営業分析</span></p>
         </div>
       </li>
       <li class="point inview">
@@ -390,7 +393,7 @@
             05</p>
           <img src="img/circle_img5.jpeg" class="circle_img"></div>
         <div>
-          <p class="wb"><span class="marker_3 js-markerScrollAnimation">リード獲得+商談対応まで全てワントップで対応可能。クロージング対応まで引き受けます。</span></p>
+          <p class="wb"><span class="marker_3 js-markerScrollAnimation">あらゆる業界の支援実績が豊富大量の定量データのエビデンスを保有</span></p>
         </div>
       </li>
     </ul>
