--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
             02</p>
           <img src="img/circle_img2.jpeg" class="circle_img"></div>
         <div>
-          <p class="wb"><span class="marker_3 js-markerScrollAnimation">数は勿論、<br>質の高いアポイント獲得を納品</span></p>
+          <p class="wb"><span class="marker_3 js-markerScrollAnimation">数はもちろん<br>質の高いアポイント獲得を納品</span></p>
         </div>
       </li>
       <li class="point inview">
@@ -384,7 +384,8 @@
             04</p>
           <img src="img/circle_img4.jpeg" class="circle_img"></div>
         <div>
-          <p class="wb"><span class="marker_3 js-markerScrollAnimation">セールスマーケティングチームによる高度な営業戦略策定、営業分析</span></p>
+          <p class="wb"><span class="marker_3 js-markerScrollAnimation">セールスマーケティングチーム<br>
+            高度な営業戦略策定、営業分析</span></p>
         </div>
       </li>
       <li class="point inview">
@@ -393,7 +394,8 @@
             05</p>
           <img src="img/circle_img5.jpeg" class="circle_img"></div>
         <div>
-          <p class="wb"><span class="marker_3 js-markerScrollAnimation">あらゆる業界の支援実績が豊富大量の定量データのエビデンスを保有</span></p>
+          <p class="wb"><span class="marker_3 js-markerScrollAnimation">
+            あらゆる業界の支援実績<br>豊富な定量データ<br>多数のエビデンスを保有</span></p>
         </div>
       </li>
     </ul>
