--- a/index.html
+++ b/index.html
@@ -56,21 +56,21 @@
     </ul>
     <ul class="nav_menu_ul nav_menu_ul3 flex">
       <div class="nav_menu_div">
-        <li class="nav_menu_li hov-parent1" id="js-hover1"><a href="#" class="hov-child__"><span>COMPANY</span><br>
+        <li class="nav_menu_li hov-parent1" id="js-hover1"><a class="hov-child__"><span>COMPANY</span><br>
           会社について</a>
           <div class="hov-child1">
             <ul>
               <!--<li><a href="index.html#mission" class="hov-child__"><span><img src="img/icon_arrow2.png" class="arrow"></span>会社について</a></li>-->
               <li><a href="company.html#" class="hov-child__"><span><img src="img/icon_arrow2.png" class="arrow"></span>会社情報</a></li>
-              <li><a href="company.html#members" class="hov-child__"><span><img src="img/icon_arrow2.png" class="arrow"></span>メンバー紹介</a></li>
+              <li><a href="members.html"# class="hov-child__"><span><img src="img/icon_arrow2.png" class="arrow"></span>メンバー紹介</a></li>
             </ul>
           </div>
         </li>
       </div >
       <div class="nav_menu_div">
-        <li class="nav_menu_li hov-parent2" id="js-hover2"><a href="#" class="hov-child__"><span>SURVISE</span><br>
+        <li class="nav_menu_li hov-parent2" id="js-hover2"><a href="index.html#services" class="hov-child__"><span>SURVISE</span><br>
           サービス一覧</a>
-          <div class="hov-child2">
+          <!--<div class="hov-child2">
             <ul class="fl">
               <li><a href="index.html#services" class="hov-child__"><span><img src="img/icon_arrow2.png" class="arrow arrow6"></span>サービス一覧</a></li>
               <li><a href="" class="hov-child__"><span><img src="img/icon_arrow2.png" class="arrow"></span>営業代行支援</a></li>
@@ -82,7 +82,7 @@
               <li><a href="" class="hov-child__"><span><img src="img/icon_arrow2.png" class="arrow"></span>フィールドセールス支援</a></li>
               <li><a href="" class="hov-child__"><span><img src="img/icon_arrow2.png" class="arrow"></span>セールスマーケティング支援</a></li>
             </ul>
-          </div>
+          </div>-->
         </li>
         <div style="clear: both;"></div>
       </div>
@@ -106,7 +106,8 @@
           </ul>
         </div>
       </div>
-      <div class="option">
+		<div class="option"> <a href="index.html#services" class="hov-child__">SERVICES</a> </div>
+      <!--<div class="option">
         <input type="checkbox" id="toggle2" class="toggle">
         <label class="title" for="toggle2">SURVISE</label>
         <div class="content">
@@ -119,7 +120,7 @@
             <li><a href="#" class="hov-child__">セールスマーケティング支援</a></li>
           </ul>
         </div>
-      </div>
+      </div>-->
       <div class="option"> <a href="topics.html#" class="hov-child__">TOPICS</a> </div>
       <div class="option"> <a href="contact2.html#" class="hov-child__">DOCUMENT</a> </div>
       <div class="option"> <a href="contact.html#" class="hov-child__">CONTACT</a> </div>
@@ -141,16 +142,17 @@
       <div class="tac">
         <h1 class="mainvisual_text3"><span class="marker_slide">営業代行の新時代</span></h1>
         <br>
-        <p class="mainvisual_text2">革新と新進のコラボで、<br>
-          未来への道を拓きます。</p>
-        <p class="mainvisual_text4">革新&nbsp;<span>×</span>&nbsp;新進</p>
+        <p class="mainvisual_text2">次世代の営業戦術
+          BDRで<br>
+          未来への道を新規開拓します</p>
+        <p class="mainvisual_text4">革新&nbsp;<span>×</span>&nbsp;革新</p>
       </div>
       <br>
       <br>
       <div class="flex jcc btn_wrap">
         <div class="button-4">
           <div class="eff-4"></div>
-          <a href="contact.html#">お電話はこちらから</a> </div>
+          <a href="tel:050-7586-3360">　お電話でのご相談　</a> </div>
         <div class="button-5">
           <div class="eff-5"></div>
           <a href="contact2.html#">営業のご相談(無料)</a> </div>
@@ -398,7 +400,7 @@
         <div class="reason_img">
           <!--<p class="reason_number"><span>REASON</span><br>
             05</p>-->
-          <img src="img/REASON.04_1.png" class=""></div>
+          <img src="img/REASON.05_1.png" class=""></div>
         <div>
           <p class="wb"><span class="marker_3 js-markerScrollAnimation"> あらゆる業界の支援実績<br>
             豊富な定量データ<br>
@@ -419,7 +421,7 @@
     <div class="flex jcc">
       <div class="contact_btn">
         <div class="eff-contact"></div>
-        <a href="contact.html#">お電話はこちら</a></div>
+        <a href="tel:050-7586-3360">お電話でのご相談</a></div>
       <div class="contact_btn2">
         <div class="eff-contact2"></div>
         <a href="contact.html#">営業のご相談(無料)</a></div>
@@ -531,7 +533,7 @@
     <div class="flex jcc">
       <div class="contact_btn">
         <div class="eff-contact"></div>
-        <a href="contact.html#">お電話はこちら</a></div>
+        <a href="tel:050-7586-3360">お電話でのご相談</a></div>
       <div class="contact_btn2">
         <div class="eff-contact2"></div>
         <a href="contact.html#">営業のご相談(無料)</a></div>
@@ -639,21 +641,23 @@
     <div class="sec_title title_sec3">
       <div>
         <p class="sec_title_1">COMPANY</p>
-        <p class="sec_title_2">わたしたちについて</p>
+        <p class="sec_title_2"></p>
       </div>
       <div class="sec_title_border"></div>
       <br>
       <div class="btn__ btn_reverse_02"> <a href="company.html"><span class="text">会社概要</span></a> </div>
     </div>
+	<div class="missio_wrap">  
+	 <h3 class="sec_reason_h3" style="font-size: 2.2rem;">我々はアウトバウンド営業に専門特価した営業のプロフェッショナル集団です。</h3><br>
     <div class="inview2 flex mission_break">
       <div class="mission_img"><img src="img/misson_img.png"></div>
       <div class="sec_reason_text">
-        <h3 class="sec_reason_h3 wb">我々はアウトバウンド営業に専門特価した<wbr>
-          営業のプロフェッショナル集団です。</h3>
+       
         <h3 class="res_sec_reason_h3">我々はアウトバウンド営業に専門特価した営業のプロフェッショナル集団です。</h3>
         <p><span class="marker_2 js-markerScrollAnimation">あらゆる業界の営業課題を最短最速でご支援する事がミッションでございます。</span>リードセールス、クロージングセールス、営業組織立上げまで一気通貫でご依頼頂く事が可能でございます。<span class="marker_2 js-markerScrollAnimation">「営業」で人と企業をツナグ架け橋となるようにクライアントの皆様方のサービスをスケールさせるお手伝いをさせてください。</span></p>
       </div>
     </div>
+	</div>	
   </div>
 </section>
 <!---------------レスポンシブTOP会社紹介会社情報------------------>
@@ -688,7 +692,7 @@
   <div class="flex jcc">
     <div class="contact_btn">
       <div class="eff-contact"></div>
-      <a href="contact.html#">お電話はこちら</a></div>
+      <a href="tel:050-7586-3360">お電話でのご相談</a></div>
     <div class="contact_btn2">
       <div class="eff-contact2"></div>
       <a href="contact.html#">営業のご相談(無料)</a></div>
@@ -704,7 +708,7 @@
 <!---------------フッター------------------>
 <footer>
   <div class="footer_wrap">
-    <div class="footer_logo"> <a href="#"><img src="img/logo.png" alt=""></a>
+    <div class="footer_logo"> <a href="#"><img src="img/logo_2.png" alt=""></a>
       <ul class="addres">
         <li><strong>株式会社RISING INNOVATION</strong></li>
         <li>〒531-0072</li>
