--- a/index.html
+++ b/index.html
@@ -142,10 +142,8 @@
       <div class="tac">
         <h1 class="mainvisual_text3"><span class="marker_slide">営業代行の新時代</span></h1>
         <br>
-        <p class="mainvisual_text2">次世代の営業戦術
-          BDRで<br>
-          未来への道を新規開拓します</p>
-        <p class="mainvisual_text4">革新&nbsp;<span>×</span>&nbsp;革新</p>
+        <p class="mainvisual_text2">次世代の営業戦術 <br>BDRで未来への道を新規開拓支援</p>
+        <p class="mainvisual_text4">営業&nbsp;<span>×</span>&nbsp;革新</p>
       </div>
       <br>
       <br>
@@ -648,13 +646,15 @@
       <div class="btn__ btn_reverse_02"> <a href="company.html"><span class="text">会社概要</span></a> </div>
     </div>
 	<div class="missio_wrap">  
-	 <h3 class="sec_reason_h3" style="font-size: 2.2rem;">我々はアウトバウンド営業に専門特価した営業のプロフェッショナル集団です。</h3><br>
+	 <h3 class="sec_reason_h3" style="font-size: 2.5rem;">我々はアウトバウンド営業に専門特価した<br>営業のプロフェッショナル集団です。</h3><br>
     <div class="inview2 flex mission_break">
       <div class="mission_img"><img src="img/misson_img.png"></div>
       <div class="sec_reason_text">
        
         <h3 class="res_sec_reason_h3">我々はアウトバウンド営業に専門特価した営業のプロフェッショナル集団です。</h3>
-        <p><span class="marker_2 js-markerScrollAnimation">あらゆる業界の営業課題を最短最速でご支援する事がミッションでございます。</span>リードセールス、クロージングセールス、営業組織立上げまで一気通貫でご依頼頂く事が可能でございます。<span class="marker_2 js-markerScrollAnimation">「営業」で人と企業をツナグ架け橋となるようにクライアントの皆様方のサービスをスケールさせるお手伝いをさせてください。</span></p>
+        <p><span class="marker_2 js-markerScrollAnimation">あらゆる業界の営業課題を最短最速でご支援する事がミッションでございます。<br>
+          リードセールス、クロージングセールス、営業組織立上げまで一気通貫でご依頼頂く事が可能です。<br>
+          「営業」で人と企業をツナグ架け橋となるようにクライアントの皆様方のサービスをスケールさせるお手伝いをさせて頂きます。</span></p>
       </div>
     </div>
 	</div>	
@@ -672,8 +672,7 @@
 <div class="inview2 flex res_mission_flex">
   <div class="mission_img"><img src="img/misson_img.png"></div>
   <div class="sec_reason_text">
-    <h3 class="sec_reason_h3">我々はアウトバウンド営業に<br>
-      専門特価した、<br>
+    <h3 class="sec_reason_h3">我々はアウトバウンド営業に専門特価した、<br>
       プロフェッショナル集団です。</h3>
     <h3 class="res_sec_reason_h3">我々はアウトバウンド営業に専門特価したプロフェッショナル集団です。</h3>
     <div id="services"></div>
